--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "building Entreprise Application",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf dist/ && babel src -d build",
-    "serve": "yarn run build && node src/index.js",
+    "build": "rimraf dist/ && babel src -d dist",
+    "serve": "yarn run build && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
