Debbuger VSCODE in stand by to fix

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/register": "^7.5.5",
     "cucumber": "^5.1.0",
@@ -47,7 +48,9 @@
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.18.2",
     "husky": "^3.0.1",
+    "ndb": "^1.1.4",
     "nodemon": "^1.19.1",
-    "rimraf": "^2.6.3"
+    "rimraf": "^2.6.3",
+    "superagent": "^5.1.0"
   }
 }
