--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
   "cucumberautocomplete.steps": [
-    "spec/cucumber/steps/*.js",
-    "node_modules/qa-lib/src/step_definitions/*.js"
+    "spec/cucumber/steps/*.js"
   ],
   "cucumberautocomplete.syncfeatures": "tests/features/*feature",
   "cucumberautocomplete.strictGherkinCompletion": true,
