--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf dist/ && babel src -d dist",
-    "serve": "yarn run build && node dist/index.js",
+    "serve": "yarn run build && dotenv node dist/index.js",
     "watch": "nodemon -w src --exec yarn serve",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
-    "test:e2e": "cucumber-js spec/cucumber/features --require-module @babel/register --require spec/cucumber/steps"
+    "test:e2e": "dotenv cucumber-js -- spec/cucumber/features --require-module @babel/register --require spec/cucumber/steps"
   },
   "husky": {
     "hooks": {
@@ -44,6 +44,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/register": "^7.5.5",
     "cucumber": "^5.1.0",
+    "dotenv-cli": "^2.0.1",
     "eslint": "^6.1.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.18.2",
